log
Thu 23 Mar 2023 03:57:13 PM UTC: 
 list.c | 22 +++++++++++++++++-----
 1 file changed, 17 insertions(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
a909ff6
Thu 23 Mar 2023 03:58:02 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
fdd2dda
Thu 23 Mar 2023 03:59:04 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
ce97167
Thu 23 Mar 2023 03:59:33 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
369281f
Thu 23 Mar 2023 04:00:20 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
249cf6d
Thu 23 Mar 2023 04:00:44 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
fdc6ef5
Thu 23 Mar 2023 04:00:56 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1117a10
Thu 23 Mar 2023 04:01:29 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
73f610c
Thu 23 Mar 2023 04:02:17 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
49b3b78
Thu 23 Mar 2023 04:03:52 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
bfeeeeb
Thu 23 Mar 2023 04:05:08 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6af8fba
Thu 23 Mar 2023 04:05:45 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|5
total_score: 15/70
31c940d
Thu 23 Mar 2023 04:06:21 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
07666b8
Thu 23 Mar 2023 04:07:11 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
e775984
Thu 23 Mar 2023 04:09:21 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:54:28: error: ‘Node’ has no member named ‘dato’; did you mean ‘data’?
   54 |     return (list->current->dato);
      |                            ^~~~
      |                            data
list.c:55:1: error: control reaches end of non-void function [-Werror=return-type]
   55 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
87f3140
Thu 23 Mar 2023 04:09:28 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e78f4fd
